--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         background-color: #4CAF50;
         color: white;
         flex-wrap: wrap;
+        position: relative;
     }
 
     .header-left { flex: 1; }
@@ -38,6 +39,10 @@
         list-style: none;
         padding: 0;
         margin: 0;
+    }
+
+    .header-center ul li {
+        position: relative; /* 드롭다운 기준 */
     }
 
     .header-center ul li a {
@@ -149,30 +154,34 @@
         background: #45a049;
     }
 
+    /* 드롭다운 */
     .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #fff;
-            min-width: 200px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-        }
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #fff;
+        min-width: 200px;
+        box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+        z-index: 1000;
+    }
 
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            background-color: transparent;
-        }
+    .dropdown-content a {
+        color: black !important;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        background-color: transparent;
+    }
 
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
+    .dropdown-content a:hover {
+        background-color: #ddd;
+        color: gold !important;
+    }
 
-        nav ul li:hover .dropdown-content {
-            display: block;
-        }
+    .header-center ul li:hover .dropdown-content {
+        display: block;
+    }
 </style>
 </head>
 <body>
@@ -185,13 +194,14 @@
     <div class="header-center">
         <ul>
             <li><a href="">홈</a></li>
-            <li><a href="#about">학교 소개</a></li>
+            <li><a href="">학교 소개</a>
                 <div class="dropdown-content">
                     <a href="#">학교장의 인사</a>
                     <a href="#">학교 현황</a>
                     <a href="#">학교 상징</a>
                     <a href="www.ichan50.com.html">이찬코리아</a>
                 </div>
+            </li>
             <li><a href="#news">공지사항</a></li>
             <li><a href="#calendar">학사 일정</a></li>
         </ul>
@@ -259,15 +269,10 @@
 <script>
     const loginBtn = document.getElementById('login-page-btn');
 
-    // 로그인 상태 확인
     function updateLoginBtn(){
         const currentUser = localStorage.getItem('currentUser');
         const currentAdmin = localStorage.getItem('currentAdmin');
-        if(currentUser || currentAdmin){
-            loginBtn.textContent = '로그아웃';
-        } else {
-            loginBtn.textContent = '로그인';
-        }
+        loginBtn.textContent = (currentUser || currentAdmin) ? '로그아웃' : '로그인';
     }
     updateLoginBtn();
 
@@ -298,5 +303,4 @@
     }
 </script>
 </body>
-
 </html>
