--- a/comment.html
+++ b/comment.html
@@ -457,5 +457,7 @@
         document.getElementById('current-user').textContent = currentUser ? `아이디: ${currentUser}` : (currentAdmin ? `아이디: ${currentAdmin}` : '로그인 필요');
         loadComments();
     </script>
+    <script src="zit.js"></script>
 </body>
+
 </html>
