--- a/comment.html
+++ b/comment.html
@@ -457,7 +457,8 @@
         document.getElementById('current-user').textContent = currentUser ? `아이디: ${currentUser}` : (currentAdmin ? `아이디: ${currentAdmin}` : '로그인 필요');
         loadComments();
     </script>
-    <script src="zit.js"></script>
+    <script src="comment.js"></script>
 </body>
 
 </html>
+
